<resources>
    <string name="app_name">Medicine Management</string>
    <string name="content_description">-</string>

    //menus
    <string name="medicine_activity">Input Obat Baru</string>
    <string name="stock_opname_activity">Input Stock</string>
    <string name="report_stock_opname_activity">Laporan Stock Obat</string>
    <string name="add_new_menu_medicine">-</string>
    <string name="direct_sale_activity">Penjualan Obat</string>
    <string name="report_direct_sale_activity">Laporan Penjualan Obat</string>
    <string name="detail_mnu">Detail</string>
    <string name="edit_mnu">Edit</string>
    <string name="reverse_mnu">Reverse</string>
    <string name="delete_mnu">Delete</string>

    //login activity
    <string name="username">Nama Pengguna</string>
    <string name="address">Alamat</string>
    <string name="password">Password</string>
    <string name="fill_in_address">Isi Alamat</string>
    <string name="login_btn">Login</string>
    <string name="copyright">Copyright 2022 By dracooCorp</string>

    //home activity
    <string name="date_lbl">Tanggal</string>
    <string name="choose_menu">Pilih Menu</string>
    <string name="choose_menu_you_want">Pilih menu yang akan dikerjakan</string>
    <string name="welcome">Welcome</string>

    //new medicine activity
    <string name="empty_data">Data Kosong</string>
    <string name="search_medicine_name">Cari Nama Obat</string>

    // stock opname
    <string name="stock_opname_input">Input No Faktur, Kode Obat, dan Jumlah</string>
    <string name="search">Cari</string>
    <string name="search_3_dot2">Cari&#8230;</string>
    <string name="faktur_no">No Faktur</string>
    <string name="choose_month_year">Pilih bulan tahun</string>

    //dialog
    <string name="medicine_code">Kode Obat</string>
    <string name="medicine_name">Nama Obat</string>
    <string name="pieces_type">Jenis Satuan</string>
    <string name="qty_medicine">Jumlah</string>
    <string name="medicine_category">Kategory Obat</string>
    <string name="piece_prize">Harga Satuan</string>
    <string name="save_btn">Simpan</string>
    <string name="edit_btn">Ubah</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Pilih</string>
    <string name="medicine_input">Input Kode, Nama Obat dan Jenis Satuan</string>
    <string name="medicine_qty_input">Input Jenis dan Harga Satuan</string>
    <string name="kolom_1">Kolom 1</string>
    <string name="kolom_2">Kolom 2</string>
    <string name="find_medicine">Cari Obat</string>

    //direct sale
    <string name="direct_sale_input">Cari Obat dan Input Jumlah Obat</string>
    <string name="add_button">Tambah</string>
    <string name="total">Total</string>
    <string name="bill_no">No Tagihan</string>
    <string name="action">Aksi</string>
    <string name="cashier">Kasir</string>
    <string name="search_medicine_or_bill">Cari Nama Obat / No Tagihan</string>
</resources>