<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bti_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#99000000"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomTopCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/top_btn"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="150dp"
                android:backgroundTint="@color/gray_button"
                app:shapeAppearanceOverlay="@style/buttomShape"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/lbl_top_bsam_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:text="@string/medicine_input"
                android:textColor="@color/text_gray1"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_btn" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medicine_code_bsam_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/border_color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_top_bsam_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicine_code_bsam_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="5"
                    android:hint="@string/medicine_code" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medicine_name_bsam_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/border_color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicine_code_bsam_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicine_name_bsam_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:hint="@string/medicine_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medicine_category_bsam_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/border_color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicine_name_bsam_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicine_category_bsam_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:hint="@string/medicine_category" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lbl_bottom_bsam_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="37dp"
                android:text="@string/medicine_qty_input"
                android:textColor="@color/text_gray1"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicine_category_bsam_til" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pieces_type_bsam_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/border_color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pieces_prize_bsam_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pieces_type_bsam_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:hint="@string/pieces_type" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pieces_prize_bsam_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/border_color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_bottom_bsam_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pieces_prize_bsam_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/piece_prize" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/button_bsam_gd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_bsam_button"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="1dp"
                android:backgroundTint="@color/gray_button"
                app:shapeAppearanceOverlay="@style/buttomShape"
                android:textAllCaps="false"
                android:padding="12dp"
                android:text="@string/save_btn"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/medicine_code_bsam_til"
                app:layout_constraintStart_toEndOf="@+id/button_bsam_gd"
                app:layout_constraintTop_toBottomOf="@id/pieces_type_bsam_til" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_bsam_button"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="1dp"
                app:shapeAppearanceOverlay="@style/buttomShape"
                android:textAllCaps="false"
                android:backgroundTint="@color/white"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/text_gray1"
                app:layout_constraintStart_toStartOf="@+id/medicine_code_bsam_til"
                app:layout_constraintEnd_toStartOf="@+id/button_bsam_gd"
                app:layout_constraintTop_toBottomOf="@id/pieces_type_bsam_til"
                app:strokeColor="@color/border_color2"
                app:strokeWidth="1dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>